# ai-inference-study

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/00-fundamentals/: 00-introduction.md  01-models-checkpoints.md  02-inference.md  03-inference-lifecycle.md  04-workloads.md  05-deployment-targets.md  06-gpu-fundamentals.md  07-common-pitfalls.md
docs/01-models-usage-patterns/: 00-introduction.md  01-single-model.md  02-pipeline.md  03-ensemble.md  04-rag.md  05-agentic.md
docs/02-inference-servers/: 00-introduction.md  01-single-model.md  02-pipeline.md  03-llm-servers.md  04-scaling.md  05-comparison.md
docs/03-architecture-patterns/: 00-introduction.md  01-api-routing.md  02-state-management.md  03-scaling-and-load.md  04-streaming-patterns.md  05-observability-integration.md
docs/04-deployment/: 00-introduction.md  01-containerization.md  02-kubernetes-helm.md  (+2 more)
projects/01-image-classification/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
projects/01-image-classification/app/: main.py
projects/01-image-classification/app/api/: __init__.py  classify.py  root.py  schemas.py
projects/01-image-classification/app/connections/: inference_client.py
projects/01-image-classification/app/core/: config.py  dependencies.py  lifespan.py  logger.py  utils.py
projects/01-image-classification/app/pipelines/: classification_pipeline.py
projects/01-image-classification/app/services/: classification_service.py
projects/01-image-classification/app/static/: imagenet_classes.json
projects/01-image-classification/app/utils/: validators.py
projects/01-image-classification/model/resnet50/: config.pbtxt
projects/01-image-classification/monitoring/grafana/dashboards/: triton.json
projects/01-image-classification/monitoring/grafana/provisioning/datasources/: prometheus.yml
projects/01-image-classification/monitoring/prometheus/: prometheus.yml  triton.rules.yml
projects/01-image-classification/scripts/: convert_to_onnx.py
projects/02-streaming-llm-chat/: .env.ollama  .env.vllm  Dockerfile  Makefile  README.md  docker-compose.ollama.yaml  docker-compose.vllm.yaml  pyproject.toml
projects/02-streaming-llm-chat/app/: main.py
projects/02-streaming-llm-chat/app/api/: __init__.py  chat.py  root.py  schemas.py
projects/02-streaming-llm-chat/app/connections/: llm_client.py  redis_client.py
projects/02-streaming-llm-chat/app/core/: config.py  dependencies.py  exception_handlers.py  exceptions.py  lifespan.py
projects/02-streaming-llm-chat/app/services/: conversation_service.py  llm_service.py
(+18 files in other folders)
